--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ db.sqlite3
 db.sqlite3-journal
 media
 
+
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
@@ -139,6 +140,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.DS_Store
 
 # Spyder project settings
 .spyderproject
