--- a/requirements.txt
+++ b/requirements.txt
@@ -16,14 +16,17 @@ idna==3.4
 inflection==0.5.1
 oauthlib==3.2.2
 packaging==23.2
+paypalrestsdk==1.1.0
 Pillow==10.1.0
 pycparser==2.21
 PyJWT==2.8.0
+python-decouple==3.8
 python3-openid==3.2.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
+six==1.16.0
 social-auth-app-django==5.4.0
 social-auth-core==4.5.0
 sqlparse==0.4.4
