--- a/requirements.txt
+++ b/requirements.txt
@@ -60,7 +60,7 @@ python-dateutil==2.8.2
 python-decouple==3.8
 python3-openid==3.2.0
 pytz==2023.3.post1
-pywin32==306
+# pywin32==306
 pyxnat==1.6.2
 PyYAML==6.0.1
 rdflib==7.0.0
