--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 annotated-types==0.6.0
 anyio==4.3.0
+appscript==1.3.0
 asgiref==3.7.2
+attrs==25.3.0
 certifi==2023.7.22
 cffi==1.16.0
 chardet==5.2.0
@@ -21,9 +23,11 @@ django-rest-passwordreset==1.3.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 docx2pdf==0.1.8
+drf-spectacular==0.27.2
 drf-yasg==1.21.7
 etelemetry==0.3.1
 filelock==3.13.1
+fpdf==1.7.2
 h11==0.14.0
 httpcore==1.0.3
 httplib2==0.22.0
@@ -31,6 +35,8 @@ httpx==0.26.0
 idna==3.4
 inflection==0.5.1
 isodate==0.6.1
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
 looseversion==1.3.0
 lxml==5.1.0
 networkx==3.2.1
@@ -43,6 +49,7 @@ packaging==23.2
 pandas==2.2.0
 pathlib==1.0.1
 paypalrestsdk==1.1.0
+pdfkit==1.0.0
 Pillow==10.1.0
 plum-dispatch==1.7.4
 prov==2.0.0
@@ -58,16 +65,17 @@ PyPDF2==3.0.1
 pytesseract==0.3.10
 python-dateutil==2.8.2
 python-decouple==3.8
+python-docx==1.2.0
 python3-openid==3.2.0
 pytz==2023.3.post1
-# pywin32==306
 pyxnat==1.6.2
 PyYAML==6.0.1
 rdflib==7.0.0
+referencing==0.36.2
 reportlab==4.1.0
 requests==2.31.0
 requests-oauthlib==1.3.1
-scipy==1.12.0
+rpds-py==0.27.1
 simplejson==3.19.2
 six==1.16.0
 sniffio==1.3.0
@@ -81,4 +89,3 @@ typing_extensions==4.8.0
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.1.0
-drf-spectacular==0.27.2
