--- a/requirements.txt
+++ b/requirements.txt
@@ -76,6 +76,7 @@ reportlab==4.1.0
 requests==2.31.0
 requests-oauthlib==1.3.1
 rpds-py==0.27.1
+scipy==1.16.2
 simplejson==3.19.2
 six==1.16.0
 sniffio==1.3.0
@@ -85,7 +86,7 @@ sqlparse==0.4.4
 stripe==7.4.0
 tqdm==4.66.2
 traits==6.3.2
-typing_extensions==4.8.0
+typing_extensions==4.15.0
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.1.0
