--- a/requirements.txt
+++ b/requirements.txt
@@ -82,3 +82,8 @@ tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.1.0
 drf-spectacular==0.27.2
+# Additional dependencies for profile and OCR functionality
+Pillow>=10.0.0
+pytesseract>=0.3.10
+PyMuPDF>=1.23.0
+python-docx>=0.8.11
