--- a/requirements.txt
+++ b/requirements.txt
@@ -87,3 +87,8 @@ Pillow>=10.0.0
 pytesseract>=0.3.10
 PyMuPDF>=1.23.0
 python-docx>=0.8.11
+# PostgreSQL and vector database dependencies
+psycopg2-binary==2.9.9
+pgvector==0.2.4
+numpy>=1.24.0
+dj-database-url==2.1.0
