--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 annotated-types==0.6.0
 anyio==4.3.0
-# appscript==1.3.0
 asgiref==3.7.2
 attrs==25.3.0
 certifi==2023.7.22
@@ -129,3 +128,4 @@ openai
 pandas>=2.0.0
 openpyxl>=3.0.0
 python-pptx>=0.6.0
+ocrmypdf>=15.0.0
